# HsPurple

./: .gitignore  README.md  hspurple.cabal  run.sh
HsPurple/: Core.hs  EventLoop.hs  EventLoop.hsc
HsPurple/Structs/: AccountUiOps.hsc  ConversationUiOps.hsc  EventLoopUiOps.hsc  ProxyInfo.hsc
src/HsPurple/: Account.hs  Core.hs  EventLoop.hs  Status.hsc  Util.hs
src/HsPurple/Structs/: Account.hsc  BlistUiOps.hsc  ConversationUiOps.hsc  Status.hsc  Util.hs
src/HsPurple/UiOps/: AccountUiOps.hsc  BlistUiOps.hsc  ConnectionUiOps.hsc  ConversationUiOps.hsc  EventLoopUiOps.hsc  Util.hs
src/Network/HsPurple/: Account.hs  Account.hsc  Blist.hsc  Connection.hsc  Conversation.hsc  Core.hs  Core.hsc  EventLoop.hs  EventLoop.hsc  Plugin.hsc  SavedStatuses.hsc  SslConn.hsc  Status.hsc  Util.hs
src/Network/HsPurple/GLib/: GHashTable.hsc  GList.hsc
src/Network/HsPurple/UiOps/: AccountUiOps.hsc  BlistUiOps.hsc  ConnectionUiOps.hsc  ConversationUiOps.hsc  CoreUiOps.hsc  EventLoopUiOps.hsc
