name:           hspurple
version:        0.1
synopsis:       Haskell bindings for libpurple.
description:
  Haskell bindings for the C library \"libpurple\".
license:        GPL-2
license-file:   LICENSE
author:         Nils Schweinsberg <mail@n-sch.de>
maintainer:     Nils Schweinsberg <mail@n-sch.de>
category:       Network

build-type:     Simple
cabal-version:  >= 1.6

library
  exposed-modules:
    Network.HsPurple.Account
    Network.HsPurple.Blist
    Network.HsPurple.Core
    Network.HsPurple.Connection
    Network.HsPurple.Conversation
    Network.HsPurple.EventLoop
    Network.HsPurple.Plugin
    Network.HsPurple.Status
    Network.HsPurple.SavedStatuses
    Network.HsPurple.SslConn

  other-modules:
    Network.HsPurple.GLib.GList
    Network.HsPurple.GLib.GHashTable
    Network.HsPurple.UiOps.AccountUiOps
    Network.HsPurple.UiOps.CoreUiOps
    Network.HsPurple.UiOps.ConversationUiOps
    Network.HsPurple.UiOps.ConnectionUiOps
    Network.HsPurple.UiOps.EventLoopUiOps

  build-depends:
    base >= 4 && < 5,
    unix >= 2 && < 3,
    time >= 1 && < 2,
    bindings-DSL >= 1 && < 2,
    event == 0.1,
    containers < 1

  pkgconfig-depends:
    purple >= 2.6 && < 3,
    glib-2.0 >= 2.22.2

  ghc-prof-options: -auto-all
  ghc-options: -Wall

  hs-source-dirs: src

source-repository head
  type:         git
  location:     git://github.com/mcmaniac/HsPurple.git
